tests/ui/input/attr_on_variant.stderr
error: #[funcmap] helper attribute is not supported for variants
 --> tests/ui/input/attr_on_variant.rs:5:5
  |
5 |     #[funcmap]
  |     ^^^^^^^^^^
