tests/ui/input/attr_on_variant.rs
use funcmap::FuncMap;

#[derive(FuncMap)]
enum Test<T> {
    #[funcmap]
    TestVariant(T),
}

fn main() {}
